--- a/deras_order_system/templates/index.html
+++ b/deras_order_system/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <title>Deras Order System</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='greybox.css') }}"/>
@@ -15,6 +15,7 @@
             <h1>Deras Order System</h1>
         </nav>
         <button onclick="themeChange()" class="theme-button"><i class="fas fa-moon"></i> Tema Değiştir</button>
+        <a href="{{ url_for('logout') }}" class="logout-button"><i class="fas fa-sign-out-alt"></i> Logout</a>
     </header>
     <div class="select-date">
         <input type="date" class="selected-date">
